--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "rfxcom": "*"
+    "rfxcom": "*",
+    "underscore": "^1.8.3"
   },
-  "scripts": {
-  }
+  "scripts": {}
 }
